fixed spacing

--- a/style.css
+++ b/style.css
@@ -29,12 +29,10 @@ h1, h2, h3 {
 
 .vis-holder {
 	width: 50%;
-	height: 50%;
 }
 
 .table-holder {
 	width: 50%;
-	height: 50%;
 }
 
 .pie-bar-holder {	
@@ -45,12 +43,10 @@ h1, h2, h3 {
 
 .bar-holder {
 	width: 50%;
-	height: 50%;
 }
 
 .pie-holder {
 	width: 50%;
-	height: 50%;
 }
 
 .color_background {
